Generated files are written with '\n' on every platform
The third Bazel CI run left one Windows job red: native-claims.tsv came
out different from the committed copy. ClaimsGenerator wrote it with
Files.write(path, lines), which ends each line with the platform's
separator — CRLF on Windows — so identical content produced different
bytes. Reproduced here by running the generator with
-Dline.separator=\r\n: 832 carriage returns, one per line.

It now writes '\n' explicitly (as every other generator already does);
under both separators the output is the committed file byte for byte.
The prelude generator's optional census had the same call and gets the
same fix. Every generator's main class was checked for platform line
separators; these two were the only ones.

Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_0187ucQbj9UZpTg2HSpqDtK2